# claude-code-2

./: .gitignore  CLAUDE.md  INSTALL_macOS.md  index.html  orval.config.cjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
.github/workflows/: release.yml
apps/api/: .env.example  nodemon.json  package-lock.json  package.json
apps/api/public/: index.html
apps/api/src/: application.ts  index.ts  migrate.ts  openapi-spec.ts
apps/interface/: .env.example  nodemon.json  package-lock.json  package.json  tsconfig.json
apps/interface/src/: claudeInterface.ts  config.ts  index.ts  main.ts  models.ts  queueManager.ts  rateLimitsService.ts  wsClient.ts
memory/: MEMORY.md  project_mui_migration.md
src/: App.tsx  index.css  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sidecar.rs
src/api/: apiConfig.ts  mutator.ts
src/components/: AuthGate.tsx  SetupGate.tsx  StartupErrorGate.tsx
src/components/Accordion/: index.tsx
src/components/AutocompleteButton/: index.tsx
src/components/Breadcrumb/: index.tsx  types.ts
src/contexts/: BreadcrumbContext.tsx  GlobalProvider.tsx  LoadingContext.tsx  SidebarContext.tsx  ThemeContext.tsx
src/hooks/: useDimensions.ts  useModal.tsx  useModalAnimation.ts
src/lib/: utils.ts
src/types/: assets.d.ts  claude.ts  index.ts  mui.d.ts
src/utils/: enconde.ts  floatConversions.ts  getErrorMessageFromRequest.ts  toast.ts
(+205 files in other folders)
